# TextAdventure-CLISoulWorker

./: .gitignore  CMakeLists.txt  Makefile  build.zig  cmake.sh  launcher.c  launcher.zig  main.c  zigrc
MapCreate/: .gitignore  Makefile  editor.c  editor.h  main.c
control/: Battle.c  Keyboard.c  SaveLoad.c  Setup.c
data/maps/: control_zone.json
headers/: DArray.h  Error.h  LoadJSON.h  Maze.h  Misc.h  Setup.h  SoulWorker.h
helpers/: Error.c  Misc.c
resources/: clisw.rc  launcher.rc
structures/: DArray.c  Maze.c  RoomTable.c  SoulWorker.c
